Fix: spacing issues

--- a/dev-life-ghost-theme/src/assets/css/author.scss
+++ b/dev-life-ghost-theme/src/assets/css/author.scss
@@ -23,7 +23,7 @@
   position: relative;
   left: 0;
   top: 0;
-  margin: 4rem auto 1rem auto;
+  margin: 0 auto 1rem auto;
   width: 200px;
   height: 200px;
   border-radius: 100%;
