--- a/dev-life-ghost-theme/src/assets/css/general.scss
+++ b/dev-life-ghost-theme/src/assets/css/general.scss
@@ -240,3 +240,8 @@ kbd {
   font-size: 2rem;
   font-weight: 100;
 }
+
+.page-about .content {
+  margin: 1rem auto 4rem auto;
+  max-width: 716px;
+}
